deploy/k8/misc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: biomes-primary
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:481522243848:certificate/0aef7fc6-8241-42b0-8a0e-f06fc3875443
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
          - path: /api/assets
            pathType: Prefix
            backend:
              service:
                name: asset
                port:
                  name: http
          - path: /ro-sync/
            pathType: Prefix
            backend:
              service:
                name: ro-sync
                port:
                  name: http
          - path: /sync/
            pathType: Prefix
            backend:
              service:
                name: sync
                port:
                  name: http
          - path: /sync/oob
            pathType: Prefix
            backend:
              service:
                name: oob
                port:
                  name: http
          - path: /beta-sync/
            pathType: Prefix
            backend:
              service:
                name: sync
                port:
                  name: http
